src/test/ui/impl-trait/cross-return-site-inference.stderr
error[E0282]: type annotations needed
  --> $DIR/cross-return-site-inference.rs:33:5
   |
LL |     Ok(())
   |     ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |     Ok::<(), E>(())
   |       +++++++++

error[E0282]: type annotations needed
  --> $DIR/cross-return-site-inference.rs:37:12
   |
LL |     return Err(From::from("foo"));
   |            ^^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |     return Err::<(), E>(From::from("foo"));
   |               +++++++++

error[E0282]: type annotations needed
  --> $DIR/cross-return-site-inference.rs:42:5
   |
LL |     Err(From::from("foo"))
   |     ^^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |     Err::<(), E>(From::from("foo"))
   |        +++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
